[package]
name = "transaction-retry"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.3.5" }

[dev-dependencies]
mockall = "0.8"
